feat: TeamWriteDto 클래스에 인터뷰를 오직 관전만 하는 watchers 필드 추가